--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ body {
 
 main {
     background: #6c63ff;
-    width: 60rem;
+    max-width: 60rem;
     margin: 3rem auto;
     color: #fff;
     padding: 2rem;
@@ -85,4 +85,27 @@ main {
     font-size: 2.5rem;
     text-transform: uppercase;
     letter-spacing: .3rem;
+}
+
+.footer-links {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    background: #f0f0f0;
+    padding: 2rem;
+    border-radius: 2px;
+}
+
+.footer-link a {
+    text-decoration: none;
+    font-size: 2rem;
+    color: #6c63ff;
+}
+
+@media screen and (max-width: 600px) {
+    html {
+        font-size: 50%;
+    }
 }
