--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
     font-family: 'Roboto', sans-serif;
     max-width: 65rem;
     margin: 2rem auto;
-    padding: 2rem;
+    padding: 1rem;
 }
 
 .header {
@@ -31,11 +31,11 @@ body {
     width: 100%;
 }
 
-.brand-title {
+/* .brand-title {
     color: #b1aed4;
     font-size: 2.2rem;
     margin-bottom: .6rem;
-}
+} */
 
 .subject {
     color: #454562;
@@ -65,6 +65,17 @@ main {
     margin-bottom: 2rem;
 }
 
+.main__text--contributions {
+    font-size: 1.7rem;
+    letter-spacing: .1rem;
+    font-weight: bold;
+    margin-bottom: 2rem;
+    background: rgba(255, 255, 255, 0.15);
+    border-radius: 4rem;
+    display: inline-block;
+    padding: .9rem 2.2rem;
+}
+
 .main__text--certificate {
     font-size: 1.8rem;
     margin-bottom: 1.4rem;
@@ -79,6 +90,12 @@ main {
     font-size: 1.4rem;
     border-radius: 5px;
     margin-bottom: 2rem;
+    transition: all .3s ease;
+}
+
+.btn:hover,
+.btn:active {
+    box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.15);;
 }
 
 .main__text--regards {
